[tool.poetry]
name = "iceflow"
version = "0.1.0"
description = "Ambiente de estudo com Apache Spark, MinIO e Apache Iceberg provisionado e gerenciado com Docker Compose."
authors = ["Edeilson David <edeilson.david@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "iceflow" }]

[tool.poetry.dependencies]
python = "3.11"
pyspark = "3.5.1"
minio = "7.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
